<resources>
    <string name="app_name">WWWJDIC for Android</string>
    <string name="app_name_short">WWWJDIC</string>
    <string name="translationError">Error</string>
    <string-array name="dictionary_codes_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
    </string-array>
    <string-array name="dictionary_idxs_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
    <string-array name="dictionaries_array">
        <item>General</item>
        <item>Japanese Names</item>
        <item>Computing/Telecomm</item>
        <item>Life Sciences/Bio-Med</item>
        <item>Legal Terms</item>
        <item>Finance/Marketing</item>
        <item>Buddhism</item>
        <item>Miscellaneous</item>
        <item>Engineering/Science</item>
        <item>Linguistics</item>
        <item>River &amp; Water Systems</item>
        <item>Automobile Industry</item>
        <item>Japanese-German</item>
        <item>Japanese-French</item>
        <item>Japanese-Russian</item>
        <item>Japanese-Swedish</item>
        <item>Japanese-Hungarian</item>
        <item>Japanese-Spanish</item>
        <item>Japanese-Dutch</item>
        <item>Japanese-Slovenian</item>
    </string-array>
    <string-array name="kanji_search_codes_array">
        <item>J</item>
        <item>C</item>
        <item>B</item>
        <item>E</item>
        <item>U</item>
        <item>J</item>
        <item>P</item>
        <item>Y</item>
        <item>W</item>
    </string-array>
    <string-array name="kanji_search_types_array">
        <item>Kanji or reading</item>
        <item>Stroke count</item>
        <item>Radical number</item>
        <item>English meaning</item>
        <item>Unicode code (hex)</item>
        <item>JIS code (hex)</item>
        <item>SKIP code</item>
        <item>Pinyin reading</item>
        <item>Korean reading</item>
    </string-array>
    <string name="about_text">WWWJDIC for Android, 2010</string>
    <string name="about_by">by Nikolay Elenkov</string>
    <string name="about_bugtracking">More info/issue reporting</string>
    <string name="bugtracker_url">http://code.google.com/p/wwwjdic</string>
    <string name="uses_wwwjdic">Uses Jim Breen\'s WWWJDIC</string>
    <string name="wwwjdic_link">http://wwwjdic.net
    </string>
    <string name="uses_weocr">Uses WeOCR </string>
    <string name="weocr_link">http://weocr.ocrgrid.org/
	</string>
    <string name="uses_kr">Uses kanji recognizer at </string>
    <string name="kr_link">http://kanji.sljfaq.org/kanji16/draw-canvas.html
    </string>
    <string name="select_dictionary">Select dictionary:</string>
    <string name="stroke_count">Stroke count:  </string>
    <string name="radical_number">Radical number: </string>
    <string name="english_meanings">English meanings</string>
    <string name="radical_strokes">Radical/strokes</string>
    <string name="codes_more">Codes and more</string>
    <string name="translation">Translation(s)</string>
    <string name="select_search_type">Select search type:</string>
    <string name="search">Search</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="jis_code">JIS code: </string>
    <string name="unicode_number">Unicode number: </string>
    <string name="classical_radical">Classical radical number: </string>
    <string name="freq_rank">Frequency rank: </string>
    <string name="grade">Grade: </string>
    <string name="jlpt_level">JLPT level: </string>
    <string name="skip_code">SKIP code: </string>
    <string name="korean_reading">Korean reading: </string>
    <string name="pinyn">Pinyin: </string>
    <string name="more">More...</string>
    <string name="dictionary_label">Dictionary:</string>
    <string name="dictionary">Dictionary</string>
    <string name="kanji_lookup">Kanji Lookup</string>
    <string name="about">About</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="strokes">Strokes: </string>
    <string name="select">Select...</string>
    <string name="radical">Radical: </string>
    <string name="timeout_error_message">Connection has timed out. Check your network
        connection.</string>
    <string name="socket_error_message">Failed to connect to WWWJDIC. Check your network
        connection.</string>
    <string name="generic_error_message">An unexpected error has occurred. Please report
        this.</string>
    <string name="ocr_hint1">* Align text to guide lines (approx. is OK),
        then
        press center button/tap screen to capture.</string>
    <string name="ocr_hint2">* Crop a rectangular area (single line) on the
        next
        screen and press \'Save\' to OCR.</string>
    <string name="ocr_hint3">* Press あ/漢/文 to send text to dictionary screen.
    </string>
    <string name="pref_ocr">OCR settings</string>
    <string name="pref_weocr_server">WeOCR server</string>
    <string name="pref_weocr_server_summary">Don\'t use the backup server if the main one
        is
        online</string>
    <string-array name="weocr_mirror_names">
        <item>maggie (main)</item>
        <item>jimbocho (backup)</item>
    </string-array>
    <string-array name="weocr_mirror_urls">
        <item>http://maggie.ocrgrid.org/cgi-bin/weocr/nhocr.cgi</item>
        <item>http://jimbocho.ocrgrid.org/cgi-bin/weocr/nhocr.cgi</item>
    </string-array>
    <string name="pref_weocr_timeout">WeOCR timeout</string>
    <string name="pref_timeout_summary">[seconds]</string>
    <string name="pref_wwwjdic">WWWJDIC settings</string>
    <string name="pref_wwwjdic_mirror">WWWJDIC mirror</string>
    <string-array name="wwwjdic_mirror_names">
        <item>Australia</item>
        <item>Canada</item>
        <item>EU</item>
        <item>Japan</item>
        <item>Sweden</item>
        <item>USA</item>
    </string-array>
    <string-array name="wwwjdic_mirror_coords">
        
        <item>033:51:35/151:12:40</item>
        
        <item>043:42:59/079:20:26</item>
        
        <item>048:12:32/016:22:21</item>
        
        <item>035:42:20/139:42:54</item>
        
        <item>059:21:00/018:04:00</item>
        
        <item>040:43:00/074:00:00</item>
    </string-array>
    <string-array name="wwwjdic_mirror_urls">
        <item>http://www.csse.monash.edu.au/~jwb/cgi-bin/wwwjdic.cgi
        </item>
        <item>http://ryouko.imsb.nrc.ca/cgi-bin/wwwjdic</item>
        <item>http://jp.msmobiles.com/cgi-bin/wwwjdic</item>
        <item>http://www.aa.tufs.ac.jp/~jwb/cgi-bin/wwwjdic.cgi</item>
        <item>http://wwwjdic.sys5.se/cgi-bin/wwwjdic.cgi</item>
        <item>http://www.edrdg.org/cgi-bin/wwwjdic/wwwjdic</item>
    </string-array>
    <string name="pref_wwwjdic_timeout">WWWJDIC timeout</string>
    <string name="pref_ocr_dump_cropped_images">Dump cropped images</string>
    <string name="pref_ocr_dump_cropped_images_summary">Dump to /sdcard/wwwjdic (for debugging)</string>
    <string name="pref_kr">Kanji recognizer settings</string>
    <string name="pref_kr_url">Kanji recognizer URL</string>
    <string name="pref_kr_timeout">Kanji recognizer timeout</string>
    <string name="pref_kr_use_kanji_recognizer">Use Kanji Recognizer</string>
    <string name="pref_kr_use_kanji_recognizer_summary">Use the Kanji Recognizer app for handwriting
        recognition.</string>
    <string name="settings">Settings</string>
    <string name="ocr">OCR</string>
    <string name="write_kanji">Write kanji</string>
    <string name="hkr_failed">Character recognition failed</string>
    <string name="ws_hkr_failed">Character recognition failed. If the problem
        persists, try setting the kanji recognizer URL to \'backup\' in
        Settings.</string>
    <string name="sd_file_create_failed">Could not create temp file on SD card.</string>
    <string name="af_failed">A/F failed</string>
    <string name="ocr_failed">OCR failed</string>
    <string name="cant_start_cropper">Could not start crop activity.</string>
    <string name="cancelled">Cancelled</string>
    <string name="recognize">Recognize</string>
    <string name="clear">Clear</string>
    <string name="hiragana_a">あ</string>
    <string name="kanji_kan">漢</string>
    <string name="look_ahead">Look\nahead</string>
    <string name="hkr">Hand written kanji recognition</string>
    <string name="hkr_abbrev">HKR</string>
    <string name="pref_kr_annotate">Annotate strokes</string>
    <string name="pref_kr_annotate_midway">Annotate midway</string>
    <string name="pref_kr_annotate_midway_summary">When checked, stroke numbers are shown near the
        middle of strokes. Otherwise, near the start.</string>
    <string name="pref_sod">Stroke order diagrams settings</string>
    <string name="pref_sod_server_timeout">SOD server timeout</string>
    <string name="pref_sod_animation_delay">Stroke animation delay</string>
    <string name="pref_sod_animation_delay_summary">[milliseconds]</string>
    <string name="draw">Draw</string>
    <string name="animate">Animate</string>
    <string name="no_history">No history</string>
    <string name="stroke_order">Stroke order</string>
    <string name="no_favorites">No favorites</string>
    <string name="delete_all">Delete all</string>
    <string name="look_up">Look up</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="delete_all_iteims">Delete all items?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="favorites">Favorites</string>
    <string name="search_history">Search history</string>
    <string name="favorites_hist">Favorites/Hist.</string>
    <string name="uses_kanjivg">Uses KanjiVG</string>
    <string name="kanjivg_link">http://kanjivg.tagaini.net</string>
    <string name="crop_save_text">Crop</string>
    <string name="crop_discard_text">Discard</string>
    <string name="runningFaceDetection">Please wait\u2026</string>
    <string name="example_search">Examples/Transl.</string>
    <string name="kanji_bun">文</string>
    <string name="max_num_examples">Max\nexamples:</string>
    <string name="exact_match">Exact match \n(Eng. only)</string>
    <string name="enter_eng_or_jap">Enter English or Japanese</string>
    <string name="enter_kanji_search_key">Enter kanji search key</string>
    <string name="pref_ocr_direct_search">Direct search</string>
    <string name="pref_ocr_direct_search_summary">When checked OCR-ed text is not sent to
        dictionary screen for editing before search.</string>
    <string name="pref_analytics">Analytics</string>
    <string name="pref_enable_analytics">Enable analytics</string>
    <string name="pref_analytics_summary">Send anonymous usage statistics to
        help make
        WWWJDIC a better app.</string>
    <string name="pref_default_dict">Default dictionary</string>
    <string name="pref_auto_select_mirror">Mirror auto select</string>
    <string name="pref_auto_select_mirror_summary">Automatically select closest WWWJDIC mirror.
    </string>
</resources>