<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_wwwjdic">
      <CheckBoxPreference android:key="pref_auto_select_mirror"
            android:title="@string/pref_auto_select_mirror"
            android:summary="@string/pref_auto_select_mirror_summary"
            android:defaultValue="true" android:disableDependentsState="true"/>
        <ListPreference android:title="@string/pref_wwwjdic_mirror"
            android:key="pref_wwwjdic_mirror_url"
            android:defaultValue="http://www.csse.monash.edu.au/~jwb/cgi-bin/wwwjdic.cgi"
            android:entries="@array/wwwjdic_mirror_names"
            android:entryValues="@array/wwwjdic_mirror_urls" android:dependency="pref_auto_select_mirror"/>
        <EditTextPreference android:key="pref_wwwjdic_timeout"
            android:title="@string/pref_wwwjdic_timeout"
            android:summary="@string/pref_timeout_summary"
            android:singleLine="true" android:inputType="numberDecimal"
            android:defaultValue="15" android:maxLength="4" />
         <ListPreference android:title="@string/pref_default_dict"
            android:key="pref_default_dict"
            android:defaultValue="0"
            android:entries="@array/dictionaries_array"
            android:entryValues="@array/dictionary_idxs_array" />    
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_ocr">
        <ListPreference android:key="pref_weocr_url"
            android:title="@string/pref_weocr_server" android:summary="@string/pref_weocr_server_summary"
            android:lines="1"
            android:defaultValue="http://maggie.ocrgrid.org/cgi-bin/weocr/nhocr.cgi"
            android:entries="@array/weocr_mirror_names"
            android:entryValues="@array/weocr_mirror_urls" />
        <EditTextPreference android:key="pref_weocr_timeout"
            android:title="@string/pref_weocr_timeout" android:summary="@string/pref_timeout_summary"
            android:singleLine="true" android:inputType="numberDecimal"
            android:defaultValue="10" android:maxLength="4" />
        <CheckBoxPreference android:key="pref_ocr_direct_search"
            android:title="@string/pref_ocr_direct_search"
            android:summary="@string/pref_ocr_direct_search_summary"
            android:defaultValue="false" />
        <CheckBoxPreference android:key="pref_ocr_dump_cropped_images"
            android:title="@string/pref_ocr_dump_cropped_images"
            android:summary="@string/pref_ocr_dump_cropped_images_summary"
            android:defaultValue="false" />
        <!--
            <CheckBoxPreference
            android:key="pref_ocr_use_internal_storage"
            android:title="Use internal storage" android:summary="Uses
            /emmc instead of /sdcard" android:defaultValue="false" />
        -->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_kr">
        <CheckBoxPreference android:key="pref_kr_use_kanji_recognizer"
            android:title="@string/pref_kr_use_kanji_recognizer"
            android:summary="@string/pref_kr_use_kanji_recognizer_summary"
            android:defaultValue="false" android:disableDependentsState="true" />
        <ListPreference android:title="@string/pref_kr_url"
            android:key="pref_kr_url"
            android:defaultValue="http://kanji.sljfaq.org/kanji16/kanji-0.016.cgi"
            android:entries="@array/kr_url_names"
            android:entryValues="@array/kr_urls" 
            android:dependency="pref_kr_use_kanji_recognizer"/>    
        <EditTextPreference android:key="pref_kr_timeout"
            android:title="@string/pref_kr_timeout" android:summary="@string/pref_timeout_summary"
            android:singleLine="true" android:inputType="numberDecimal"
            android:defaultValue="10" android:maxLength="4"
            android:dependency="pref_kr_use_kanji_recognizer" />
        <CheckBoxPreference android:key="pref_kr_annotate"
            android:title="@string/pref_kr_annotate"
            android:defaultValue="true" android:disableDependentsState="false" />
        <CheckBoxPreference android:key="pref_kr_annotate_midway"
            android:title="@string/pref_kr_annotate_midway"
            android:summary="@string/pref_kr_annotate_midway_summary"
            android:defaultValue="false" android:dependency="pref_kr_annotate" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_sod">
        <EditTextPreference android:key="pref_sod_server_timeout"
            android:title="@string/pref_sod_server_timeout"
            android:summary="@string/pref_timeout_summary"
            android:singleLine="true" android:inputType="numberDecimal"
            android:defaultValue="30" android:maxLength="4" />
        <EditTextPreference android:key="pref_sod_animation_delay"
            android:title="@string/pref_sod_animation_delay"
            android:summary="@string/pref_sod_animation_delay_summary"
            android:singleLine="true" android:inputType="numberDecimal"
            android:defaultValue="700" android:maxLength="4" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_analytics">
        <CheckBoxPreference android:key="pref_enable_analytics"
            android:title="@string/pref_enable_analytics"
            android:summary="@string/pref_analytics_summary"
            android:defaultValue="true" android:disableDependentsState="false" />
    </PreferenceCategory>
</PreferenceScreen>
